Fixed issue of misalignment of sign up link in header.

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -133,6 +133,7 @@
     /*border-right: solid 2px darken( $blue, 10% );*/
     padding: 17px 0px 0px 20px;
   }
+  header .navbar-inner .nav-pills .sign-up { padding: 0; }
 }
 
 ul.logged-in {
